<resources>
    <string name="app_name">LoKaCar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="voitures_disponibles">Voitures disponibles</string>
    <string name="voitures_lou_es">Voitures louées</string>
    <string name="enregistrer_une_voiture">Enregistrer une voiture</string>
    <string name="enregistrement_de_la_voiture"><u><b><i>Enregistrement de la voiture :</i></b></u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connexion">Connexion</string>
    <string name="vehicules_disponibles">Liste des véhicules disponibles</string>
    <string name="enregistrement_client">Enregistrement d\'un client</string>
    <string name="voiture">Voiture</string>
    <string name="clients_enregistres">Clients enregistrés :</string>
    <string name="nouveau_client">Nouveau client</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="adresse">Adresse :</string>
    <string name="telephone">Téléphone :</string>
    <string name="email">Email :</string>

    <string name="oui">oui</string>
    <string name="non">non</string>
    <string name="repNon">non</string>
    <string name="v_hicules_lou_s">Véhicules loués</string>

    <string name="enregistrer">ENREGISTRER</string>
    <string name="marque">Marque</string>
    <string name="modele">Modele</string>
    <string name="type">Type</string>
    <string name="immatriculation">Immatriculation</string>
    <string name="nbplace">NbPlace</string>
    <string name="nbporte">NbPorte</string>
    <string name="motorisation">Motorisation</string>
    <string name="climatisation">Climatisation</string>
    <string name="boite_de_vitesse">Boite de vitesse</string>
    <string name="typeLabelCard">Type :</string>
    <string name="immatriculationLabelCard">Immatriculation :</string>
    <string name="nombre_de_placesLabelCard">Nombre de places :</string>
    <string name="nombre_de_portesLabelCard">Nombre de portes :</string>
    <string name="motorisationLabelCard">Motorisation :</string>
    <string name="climatisationLabelCard">Climatisation :</string>
    <string name="boite_de_vitesseLabelCard">Boite de vitesse :</string>
    <string name="marqueClientSaved">Marque</string>
    <string name="immatriculationClientSaved">Immatriculation</string>
    <string name="enregistrement_d_une_location">Enregistrement d\'une location</string>
    <string name="date_de_debut">Date de début :</string>
    <string name="date_de_fin">Date de fin :</string>
    <string name="prix_total">Prix total :</string>
    <string name="prix_calcule">prix calculé</string>
    <string name="client_location">Client :</string>
    <string name="nom_du_client">Nom du client</string>
    <string name="voiture_louee">Voiture :</string>
    <string name="marque_voiture">Marque voiture</string>
    <string name="modele_voiture">Modele voiture</string>
    <string name="enregistrer_location">Enregistrer</string>
    <string name="photo">Photo</string>


</resources>
