<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/marqueVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/marque" />

        <TextView
            android:id="@+id/modeleVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/modele" />

        <TextView
            android:id="@+id/typeVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/type" />

        <TextView
            android:id="@+id/immatriculationVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/immatriculation" />

        <TextView
            android:id="@+id/nbPlaceVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nbplace" />

        <TextView
            android:id="@+id/nbPorteVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nbporte" />

        <TextView
            android:id="@+id/motorisationVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/motorisation" />

        <TextView
            android:id="@+id/climatisationVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/climatisation" />

        <TextView
            android:id="@+id/isManuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/boite_de_vitesse" />
    </LinearLayout>






</android.support.v7.widget.CardView>