<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:elevation="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/marqueVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/marque" />

        <TextView
            android:id="@+id/modeleVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/modele" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="65dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/typeLabelCard"/>

        <TextView
            android:id="@+id/typeVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="85dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/immatriculationLabelCard"/>

        <TextView
            android:id="@+id/immatriculationVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/immatriculation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="105dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nombre_de_placesLabelCard"/>

        <TextView
            android:id="@+id/nbPlaceVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nbplace" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="125dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nombre_de_portesLabelCard"/>

        <TextView
            android:id="@+id/nbPorteVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nbporte" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="145dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/motorisationLabelCard"/>

        <TextView
            android:id="@+id/motorisationVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/motorisation" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="165dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/climatisationLabelCard"/>

        <TextView
            android:id="@+id/climatisationVoiturelouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/climatisation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="185dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/boite_de_vitesseLabelCard"/>

        <TextView
            android:id="@+id/isManuellouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/boite_de_vitesse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="205dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="Client :"
            android:layout_weight="0.2"/>

        <TextView
            android:id="@+id/prenomClientLouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="prenomClient"
            android:layout_weight="0.4"/>

        <TextView
            android:id="@+id/nomClientLouee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="nomClient"
            android:layout_weight="0.4"/>

    </LinearLayout>
    <Button

        android:layout_marginTop="240dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRendreVoiture"
        android:text="Rendre voiture"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
       />



</android.support.v7.widget.CardView>