<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccueilActivity">

    <Button
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer_une_voiture"
        android:layout_marginBottom="40dp"
        android:height="80dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/buttonEnregistrerVoiture"/>

    <Button
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voitures_lou_es"
        android:layout_marginBottom="40dp"
        android:height="80dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/buttonVoituresLouees"/>

    <Button
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voitures_disponibles"
        android:height="80dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/buttonVoituresDisponibles"/>



</LinearLayout>